@startuml

title __ASYNCTASKS's Class Diagram__\n

  namespace com.kaizen.nightfolks {
    namespace controller.partyManager {
      namespace asyncTasks {
        class com.kaizen.nightfolks.controller.partyManager.asyncTasks.CreatePartyAsyncTask {
            ~ partyLoading : ProgressDialog
            + CreatePartyAsyncTask()
            # doInBackground()
            # onPostExecute()
            # onPreExecute()
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.partyManager {
      namespace asyncTasks {
        class com.kaizen.nightfolks.controller.partyManager.asyncTasks.GetPartyListAsyncTask {
            - by : Pair<String, String>
            + GetPartyListAsyncTask()
            # doInBackground()
            # onPostExecute()
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.partyManager {
      namespace asyncTasks {
        abstract class com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask {
            ~ weakContext : WeakReference<Context>
            - partyLoading : ProgressDialog
        }
      }
    }
  }
  

  com.kaizen.nightfolks.controller.partyManager.asyncTasks.CreatePartyAsyncTask -up-|> com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask
  com.kaizen.nightfolks.controller.partyManager.asyncTasks.CreatePartyAsyncTask o-- com.kaizen.nightfolks.model.entities.Party : party
  com.kaizen.nightfolks.controller.partyManager.asyncTasks.GetPartyListAsyncTask -up-|> com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask
  com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask -up-|> android.os.AsyncTask
  com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask o-- com.kaizen.nightfolks.model.database.PartyDatabase : partyDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
